@@ -375,7 +375,7 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>100</width>
+         <width>130</width>
          <height>58</height>
         </rect>
        </property>
@@ -461,7 +461,7 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>100</width>
+         <width>130</width>
          <height>156</height>
         </rect>
        </property>
@@ -625,7 +625,7 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>100</width>
+         <width>130</width>
          <height>196</height>
         </rect>
        </property>
@@ -867,7 +867,7 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>100</width>
+         <width>130</width>
          <height>58</height>
         </rect>
        </property>
@@ -953,8 +953,8 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>98</width>
-         <height>58</height>
+         <width>130</width>
+         <height>386</height>
         </rect>
        </property>
        <attribute name="icon">
@@ -1102,7 +1102,7 @@
     <property name="title">
      <string>Window</string>
     </property>
-    <addaction name="actionCloseWindow"/>
+    <addaction name="actionClosePattern"/>
    </widget>
    <widget class="QMenu" name="menuHistory">
     <property name="title">
@@ -1814,9 +1814,15 @@
     <enum>QAction::NoRole</enum>
    </property>
   </action>
-  <action name="actionCloseWindow">
+  <action name="actionClosePattern">
    <property name="text">
-    <string>Close window</string>
+    <string>Close pattern</string>
+   </property>
+   <property name="iconText">
+    <string>Close pattern</string>
+   </property>
+   <property name="toolTip">
+    <string>Close pattern</string>
    </property>
    <property name="shortcut">
     <string notr="true"/>
